# integrity-template

./: .gitignore  Cargo.toml  Makefile  README.md  build-dna.sh  default.nix  dna.yaml  happ.yaml  package-lock.json  package.json  tsconfig.json  validate.ts
dna/workdir/dna/: dna.yaml  how.dna  index.ts
dna/workdir/happ/: happ.yaml  how.happ
dna/zomes/coordinator/: Cargo.toml
dna/zomes/coordinator/src/: lib.rs
dna/zomes/integrity/: Cargo.toml
dna/zomes/integrity/src/: lib.rs
dna/zomes/mydna1-core/: Cargo.toml
dna/zomes/mydna1-core/src/: lib.rs
dna/zomes/mydna1-zome1/: Cargo.toml
dna/zomes/mydna1_core/: Cargo.toml
dna/zomes/mydna1_core/src/: lib.rs
dna/zomes/mydna1_zome1/: Cargo.toml
nix/: sources.json
tests/: package-lock.json  package.json
tests/integration/: setup.js  test_api.js
