[package]
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
edition = "2021"
name = "integrity"
version = "0.0.1-alpha.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "integrity"

[dependencies]
serde = "1"

[dependencies.hdk]
default-features = false
# version = "=0.0.147"
git = "https://github.com/holochain/holochain"
branch = "pr-hdi-testing"
# path = "../../../../holochain/crates/hdk"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
futures = { version = "0.3.21", default-features = false }

[dev-dependencies.holochain_mock_hdi]
# version = "1"
git = "https://github.com/holochain/holochain"
branch = "pr-hdi-testing"
# path = "../../../../holochain/crates/mock_hdi"

[dev-dependencies.hdk]
features = ["mock", "test_utils"]
# version = "=0.0.147"
git = "https://github.com/holochain/holochain"
branch = "pr-hdi-testing"
# path = "../../../../holochain/crates/hdk"
