[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "integrity"
version = "0.0.2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "integrity"

[dependencies]
hdi = "=0.0.20"
hdk = "=0.0.148"
serde = "*"  # use whatever serde hdk gives us
thiserror = "1"
#holochain_mock_hdi = { path = "../../../../holochain/crates/mock_hdi", version = "0.0.1", optional = true }

[dev-dependencies]
# tokio = { version = "1.20.1", features = ["full"] }
# futures = { version = "0.3.21", default-features = false }
arbitrary = "=1.1.3"  # Avoid unstable rust in 1.1.4; defeats compilation of unit tests
mockall = "0.9"

#holochain = { version = "0.0.158", default-features = false, features = ["test_utils"] }
#holochain = { git = "https://github.com/holochain/holochain", rev = "6e2eeeceab49e1a6331549c0483971ef08c21f70", default-features = false, features = ["test_utils"]}
#hdi = { git = "https://github.com/holochain/holochain", rev = "6e2eeeceab49e1a6331549c0483971ef08c21f70",  version = "0.0.20",  features = ["mock", "test_utils"] }
hdi = { version = "=0.0.20",  features = ["mock", "test_utils"] }
#hdk = { git = "https://github.com/holochain/holochain", rev = "6e2eeeceab49e1a6331549c0483971ef08c21f70",  version = "0.0.148", features = ["mock"] }
hdk = { version = "=0.0.148", features = ["mock"] }
#holochain_types = { git = "https://github.com/holochain/holochain", rev = "6e2eeeceab49e1a6331549c0483971ef08c21f70", version = "0.0.53" }
#holochain_integrity_types = { git = "https://github.com/holochain/holochain", rev = "6e2eeeceab49e1a6331549c0483971ef08c21f70", version = "0.0.16" }
#holochain_mock_hdi = { version = "0.0.1" }
#holochain_mock_hdi = { path = "../../../../holochain/crates/mock_hdi", version = "0.0.1" }
#holochain_mock_hdi = { git = "https://github.com/holochain/holochain", rev = "6e2eeeceab49e1a6331549c0483971ef08c21f70", package = "holochain_mock_hdi", version = "0.0.1", optional = true }

[features]
#default = []
#mock = ["holochain_mock_hdi"]
mock = ["hdk/mock", "hdk/test_utils", "hdi/test_utils"]
