[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "mydna1_core"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mydna1_core"

[dependencies]
chrono = {version = "0.4", features = ['alloc', 'std']}
derive_more = "0.99"
serde = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
hdk = {version = "0.0.133", features = ["encoding"]}
