[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "mydna1_zome1"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mydna1_zome1"

[dependencies]
chrono = {version = "0.4", features = ['alloc', 'std']}
derive_more = "0.99"
serde = "1.0.123"
thiserror = "1.0.20"
hdk = {version = "0.0.125", features = ["encoding"]}
